# src/main/java/com/ebb/journal/model/dto/LoginDto.java
@@ -1,0 +1,17 @@
+package com.ebb.journal.model.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.extern.jackson.Jacksonized;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+@Jacksonized
+@Builder
+public class LoginDto {
+  private String email;
+  private String password;
+}
